# hccl

./: AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  build.sh  version.cmake
cmake/: config.cmake  fetch_cann_cmake.cmake  func.cmake  function.cmake  intf_pub_gccnative.cmake  makeself_built_in.cmake  makeself_custom.cmake  package.cmake
cmake/device/: CMakeLists.txt
docs/: README.md  build.md
docs/api/context/: HcclSend.md
docs/api_ref/comm_op_interface/: HcclAllGather.md  HcclAllGatherV.md  HcclAllReduce.md  HcclAlltoAll.md  HcclAlltoAllV.md  HcclAlltoAllVC.md  HcclBatchSendRecv.md  HcclBroadcast.md  HcclRecv.md  HcclReduce.md  HcclReduceScatter.md  HcclReduceScatterV.md  HcclScatter.md  HcclSend.md  data_type_def.md
docs/user_guide/: api_comm_impl.md  constraints.md  framework_integration.md  hccl_intro.md
docs/user_guide/cluster_info_config/: README.md  intro.md  rank_table_config_300i_duo.md  rank_table_config_910.md  rank_table_config_a2.md  rank_table_config_a3.md
docs/user_guide/comm_ops_support_list/: comm_ops_support.md
docs/user_guide/fault_diagnosis/: cluster_info_nego.md  cluster_info_verify_fail.md  param_link_stage.md  task_exec_stage.md
docs/user_guide/hccl_env/: HCCL_ALGO.md  HCCL_BUFFSIZE.md  HCCL_CONNECT_TIMEOUT.md  HCCL_DFS_CONFIG.md  HCCL_ENTRY_LOG_ENABLE.md  HCCL_EXEC_TIMEOUT.md  HCCL_IF_BASE_PORT.md  HCCL_IF_IP.md  HCCL_INTRA_PCIE_ENABLE.md  HCCL_INTRA_ROCE_ENABLE.md  HCCL_MULTI_QP_THRESHOLD.md  HCCL_OP_EXPANSION_MODE.md  HCCL_RDMA_RETRY_CNT.md  HCCL_RDMA_SL.md  HCCL_RDMA_TC.md  HCCL_RDMA_TIMEOUT.md  HCCL_SOCKET_FAMILY.md  HCCL_SOCKET_IFNAME.md  HCCL_WHITELIST_DISABLE.md  HCCL_WHITELIST_FILE.md  inter_server_algo_support.md
docs/zh/api_ref/: header_and_lib.md
docs/zh/architecture/: architecture-brief.md
docs/zh/user_guide/: api_comm_impl.md  constraints.md  hccl_intro.md
examples/: README.md
examples/01_point_to_point/01_send_recv/: Makefile  README.md  main.cc
examples/01_point_to_point/02_batch_send_recv_ring/: Makefile  README.md  main.cc
examples/02_collectives/01_allreduce/: Makefile  README.md  README_en.md  main.cc
examples/02_collectives/02_broadcast/: Makefile  README.md  main.cc
examples/02_collectives/03_allgather/: Makefile  README.md  main.cc
examples/02_collectives/04_reduce_scatter/: Makefile  README.md  main.cc
examples/02_collectives/05_reduce/: Makefile  README.md  main.cc
examples/02_collectives/06_alltoall/: Makefile  README.md  main.cc
examples/02_collectives/07_alltoallv/: Makefile  README.md  main.cc
examples/02_collectives/08_alltoallvc/: Makefile  README.md  main.cc
examples/02_collectives/09_scatter/: Makefile  README.md  main.cc
examples/03_ai_framework/01_pytorch/: README.md
examples/03_ai_framework/02_tensorflow/: README.md  run_tensorflow.sh
examples/04_custom_ops_p2p/: CMakeLists.txt  README.md
examples/04_custom_ops_p2p/op_host/: launch_kernel.h  load_kernel.cc  recv.cc  send.cc
examples/04_custom_ops_p2p/testcase/: main.cc
examples/05_custom_ops_allgather/: CMakeLists.txt  README.md
examples/05_custom_ops_allgather/aicpu/: CMakeLists.txt  README.md
examples/05_custom_ops_allgather/ccu/: CMakeLists.txt  README.md
examples/05_custom_ops_allgather/ccu/inc/: binary_stream.h  common.h  hccl_custom_allgather.h  log.h
examples/05_custom_ops_allgather/ccu/op_host/: CMakeLists.txt  allgather.cc  utils.cc  utils.h
examples/05_custom_ops_allgather/ccu/op_kernel_ccu/: CMakeLists.txt  ccu_kernel.cc  ccu_kernel.h  exec_op.cc  exec_op.h
examples/05_custom_ops_allgather/ccu/testcase/: Makefile  main.cc
examples/05_custom_ops_allgather/inc/: aiv_communication_base_v2.h
examples/05_custom_ops_allgather/op_host/: CMakeLists.txt  all_gather.cc
examples/05_custom_ops_allgather/op_kernel/: CMakeLists.txt
experimental/ops/: CMakeLists.txt
experimental/ops/op_common/: CMakeLists.txt  op_common_experimental.cc  op_common_experimental.h
experimental/ops/op_common/template/: CMakeLists.txt  alg_template_base_experimental.cc  alg_template_base_experimental.h
experimental/ops/op_common/topo/: CMakeLists.txt  topo_experimental.cc  topo_experimental.h
experimental/ops/reduce_scatter/: CMakeLists.txt  reduce_scatter_op_experimental.cc  reduce_scatter_op_experimental.h
experimental/ops/reduce_scatter/birs/: CMakeLists.txt  reduce_scatter_birs_executor.cc  reduce_scatter_birs_executor.h  reduce_scatter_executor_base.cc  reduce_scatter_executor_base.h
experimental/ops/reduce_scatter/birs/template/: CMakeLists.txt  reduce_scatter_birs.cc  reduce_scatter_birs.h  reduce_scatter_birs_inter.cc  reduce_scatter_birs_inter.h
hccl-campus-alltoall/: CMakeLists.txt  README.md
hccl-campus-alltoall/include/: common.h  hccl.h
hccl-campus-alltoall/op_host/: CMakeLists.txt  alltoall.cc
hccl-campus-alltoall/op_kernel_aicpu/: aicpu_kernel.cc  exec_op.cc
include/: hccl.h  hccl_mc2.h
scripts/custom/: install.sh
src/: CMakeLists.txt  hccl.cmake  scatter_aicpu_kernel.cmake
src/common/: CMakeLists.txt  adapter_acl.cc  adapter_acl.h  alg_env_config.cc  alg_env_config.h  config_log.cc  hccl_common.h  hccl_mc2.cc  inconsistent_check.cc  inconsistent_check.h  log.h  order_preserved_common.h  param_check.cc  sal.cc  static_restore.cc
src/common/hcomm_dlsym/: CMakeLists.txt  dlsym_common.h  dtype_common_dl.cc  dtype_common_dl.h  hccl_comm_dl.cc  hccl_comm_dl.h  hccl_compat.cmake  hccl_device_comm_dl.cc  hccl_device_comm_dl.h  hccl_ex_dl.cc  hccl_ex_dl.h  hccl_host_comm_dl.cc  hccl_host_comm_dl.h  hccl_inner_dl.cc  hccl_inner_dl.h  hccl_kernel_compat.cmake  hccl_mc2_ex_dl.cc  hccl_mc2_ex_dl.h  hccl_one_sided_services_dl.cc  hccl_rank_graph_dl.cc  hccl_rank_graph_dl.h  hccl_res_dl.cc  hccl_res_dl.h  hcom_dl.cc  hcom_dl.h  hcomm_device_dlsym.cc  hcomm_device_dlsym.h  hcomm_device_profiling_dl.cc  hcomm_device_profiling_dl.h  hcomm_diag_dl.cc  hcomm_diag_dl.h  hcomm_dlsym.cc  hcomm_dlsym.h  hcomm_host_profiling_dl.cc  hcomm_host_profiling_dl.h  hcomm_primitives_dl.cc  hcomm_primitives_dl.h
src/ops/: CMakeLists.txt
test/ut/: CMakeLists.txt
(+697 files in other folders)
